--- a/app/views/customers/_customer.html.erb
+++ b/app/views/customers/_customer.html.erb
@@ -27,11 +27,11 @@
       </tr>
     </thead>
     <tbody>
-      <% customer.invoices.each do |invoice| %>
+      <% @invoices.each do |invoice| %>
         <tr>
           <td><%= link_to "detalhar", invoice, class: "btn btn-secondary btn-sm" %></td>
           <td>
-            <%= I18n.l invoice.due_at, format: :small %>
+            <%= invoice.due_at %>
           </td>
           <td><%= invoice.amount.format %></td>
           <td><%= link_to invoice.customer.name, invoice.customer %></td>
@@ -42,6 +42,6 @@
   </table>
   <div class="alert alert-info" role="alert">
     Total:
-    <%= Money.from_cents(customer.invoices.sum(:amount_cents)).format %>
+    <%= Money.from_cents(@invoices.sum(:amount_cents)).format %>
   </div>
 </div>
