--- a/app/views/invoices/_invoice.html.erb
+++ b/app/views/invoices/_invoice.html.erb
@@ -3,7 +3,7 @@
 <div id="<%= dom_id invoice %>">
   <p>
     <strong><%= t("activerecord.attributes.invoice.due_at") %>:</strong>
-    <%= I18n.l invoice.due_at, format: :small %>
+    <%= invoice.due_at %>
   </p>
   <p>
     <strong>
