--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -28,9 +28,9 @@
                 include_blank: true %>
   </div>
 
-  <hr />
+  <hr/>
 
   <div>
-    <%= form.submit(class: 'btn btn-lg btn-primary')  %>
+    <%= form.submit(class: "btn btn-lg btn-primary") %>
   </div>
 <% end %>
