--- a/app/views/invoices/_form.html.erb
+++ b/app/views/invoices/_form.html.erb
@@ -31,9 +31,9 @@
                     value: @invoice.due_at&.strftime("%d/%m/%Y") %>
   </div>
 
-  <hr />
+  <hr/>
 
   <div>
-    <%= form.submit(class: 'btn btn-lg btn-primary')  %>
+    <%= form.submit(class: "btn btn-lg btn-primary") %>
   </div>
 <% end %>
