--- a/app/views/customers/_customer.html.erb
+++ b/app/views/customers/_customer.html.erb
@@ -15,33 +15,4 @@
 
 <hr/>
 
-<div class="table-responsive small">
-  <table class="table table-striped table-sm">
-    <thead>
-      <tr>
-        <th scope="col"></th>
-        <th scope="col">Vencimento</th>
-        <th scope="col">Valor</th>
-        <th scope="col">Cliente</th>
-        <th scope="col">Status</th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @invoices.each do |invoice| %>
-        <tr>
-          <td><%= link_to "detalhar", invoice, class: "btn btn-secondary btn-sm" %></td>
-          <td>
-            <%= invoice.due_at %>
-          </td>
-          <td><%= invoice.amount.format %></td>
-          <td><%= link_to invoice.customer.name, invoice.customer %></td>
-          <td><%= invoice.status %></td>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
-  <div class="alert alert-info" role="alert">
-    Total:
-    <%= Money.from_cents(@invoices.sum(:amount_cents)).format %>
-  </div>
-</div>
+<%= render "invoices/invoices" %>
