--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -1,4 +1,5 @@
 <%= render @customer %>
-<%= link_to "Editar", edit_customer_path(@customer), class: "btn btn-primary btn-lg" %>
+
+<%= link_to "Editar", edit_customer_path(@customer), class: "btn btn-primary btn-sm" %>
 <hr/>
 <%= button_to "Deletar", @customer, method: :delete, class: "btn btn-danger btn-sm" %>
