--- a/app/views/invoices/_invoices.html.erb
+++ b/app/views/invoices/_invoices.html.erb
@@ -7,7 +7,7 @@
       <thead>
         <tr>
           <th scope="col"></th>
-          <th scope="col">Value</th>
+          <th scope="col">Amount</th>
           <th scope="col">Customer</th>
           <th scope="col">Status</th>
         </tr>
