--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -1,6 +1,6 @@
 <h1><%= t("activerecord.models.invoice") %></h1>
 
-<%= link_to "Nova Fatura", new_invoice_path, class: "btn btn-primary" %>
+<%= link_to "New Invoice", new_invoice_path, class: "btn btn-primary" %>
 
 <hr/>
 
