--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -1,5 +1,7 @@
 <%= render @invoice %>
 
-<%= link_to "Editar", edit_invoice_path(@invoice), class: "btn btn-primary btn-lg" %>
+<%= link_to "Editar", edit_invoice_path(@invoice), class: "btn btn-primary btn-sm" %>
+
 <hr/>
+
 <%= button_to "Deletar", @invoice, method: :delete, class: "btn btn-danger btn-sm" %>
