--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -1,4 +1,5 @@
 <%= form_with(model: customer) do |form| %>
+
   <% if customer.errors.any? %>
     <div style="color: red">
       <ul>
@@ -9,21 +10,23 @@
     </div>
   <% end %>
 
-  <div>
+  <div class="form-group">
     <%= form.label :name, style: "display: block" %>
-    <%= form.text_field :name %>
+    <%= form.text_field :name, class: "form-control" %>
   </div>
 
-  <div>
+  <div class="form-group">
     <%= form.label :payment_type, style: "display: block" %>
-    <%= form.select :payment_type,
-                options_for_select(@customer.payment_types, @customer.payment_type),
-                include_blank: true %>
+    <%= form.select(
+      :payment_type,
+      @customer.payment_types,
+      { include_blank: "" },
+      { class: "form-control" }
+    ) %>
   </div>
 
   <hr/>
 
-  <div>
-    <%= form.submit(class: "btn btn-lg btn-primary") %>
-  </div>
+  <%= form.submit(class: "btn btn-primary") %>
+
 <% end %>
