--- a/app/views/invoices/_form.html.erb
+++ b/app/views/invoices/_form.html.erb
@@ -9,24 +9,25 @@
     </div>
   <% end %>
 
-  <div>
+  <div class="form-group">
     <%= form.label :customer, style: "display: block" %>
-    <%= form.select :customer_id,
-                options_for_select(
-                  Customer.all.map { |c| [c.name, c.id] },
-                  @invoice.customer&.id
-                ),
-                include_blank: true %>
+    <%= form.select(
+      :customer_id,
+      options_for_select(
+        @customers.map { |c| [c.name, c.id] },
+        @invoice.customer&.id
+      ),
+      { include_blank: "" },
+      { class: "form-control" }
+    ) %>
   </div>
 
-  <div>
+  <div class="form-group">
     <%= form.label :amount_cents, style: "display: block" %>
-    <%= form.text_field :amount %>
+    <%= form.text_field :amount, class: "form-control" %>
   </div>
 
   <hr/>
 
-  <div>
-    <%= form.submit(class: "btn btn-lg btn-primary") %>
-  </div>
+  <%= form.submit(class: "btn btn-primary") %>
 <% end %>
